--- a/assets/css/destaque.css
+++ b/assets/css/destaque.css
@@ -10,7 +10,7 @@
 .banner{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content: flex-end;
     color: var(--texto-destaque);
     line-height: 1.5;
     font-size: 1.2rem;
@@ -22,7 +22,8 @@
     font-weight: 700;
 }
 
-.banner__h4{
+.banner__p{
+    width: fit-content;
     font-size: 1rem;
     font-weight: 400;
 }
@@ -31,11 +32,12 @@
     background-color: var(--azul-destaque);
     color: var(--texto-destaque);
     border: none;
-    padding: 0.5rem 1rem;
+    padding: .5rem 0;
     margin-top: 1rem;
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
-    width: 40%;
+    width: 50%;
     border-radius: 5px;
+    text-align: center;
 }
