--- a/assets/css/destaque.css
+++ b/assets/css/destaque.css
@@ -19,13 +19,16 @@
 
 .banner__h1{
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: bold;
+    text-shadow: 1px 1px 5px black;
+    width: fit-content;
 }
 
 .banner__p{
     width: fit-content;
     font-size: 1rem;
     font-weight: 400;
+    text-shadow: 1px 1px 5px black;
 }
 
 .banner__btn{
