--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -1,9 +1,14 @@
+.contato{
+    margin-top: 2rem;
+}
+
 .contato:first-child{
     display: flex;
     flex-direction: column;
     padding: 1rem;
     justify-content: center;
     align-items: center;
+    
 }
 
 .referencia{
@@ -64,6 +69,8 @@
     width: 100%;
     height: 20%;
     padding: 1rem 1rem 1rem .5rem;
+    resize: none;
+    outline: none;
 }
 
 .form__btn{
