finalização do responsivo para tablet e desktop

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,7 @@
     --bg-color: #ebebeb;
     --input-placeholder: #d4d4d4;
     --input-bg: #efefef;
-    --texto-destaque: #FFFF;
+    --branco-total: #FFFF;
     --azul-destaque: #2a7ae4;
     --bg-contato: #Eaf2fd;
     --preto-leve: #464646;
