--- a/assets/css/destaque.css
+++ b/assets/css/destaque.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    color: var(--texto-destaque);
+    color: var(--branco-total);
     line-height: 1.5;
     font-size: 1.2rem;
     padding: 1rem;
@@ -43,4 +43,28 @@
     width: 50%;
     border-radius: 5px;
     text-align: center;
+}
+
+@media screen and (min-width: 481px) {
+    .destaque{
+        height: 40vh;
+    }
+
+    .banner{
+        padding: 1rem 2rem;
+    }
+
+    .banner__h1{
+        font-size: 2rem;
+    }
+}
+
+@media screen and (min-width: 769px){
+    .banner{
+        padding: 1rem 6rem;
+    }
+
+    .banner__h1{
+        font-size: 2.5rem;
+    }
 }
