--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 1rem;
 }
 
 .referencia img{
@@ -149,6 +150,7 @@
         width: 30%;
         margin: 0;
         align-items: center;
+        padding: 0;
     }
 
     .links-uteis{
