--- a/assets/css/css-index/destaque.css
+++ b/assets/css/css-index/destaque.css
@@ -1,5 +1,5 @@
 .destaque{
-    background: url("../img/banner.png");
+    background: url("../../img/banner.png");
     background-position: center;
     background-size: cover;
     height: 35vh;
