--- a/assets/css/css-index/geral-prods.css
+++ b/assets/css/css-index/geral-prods.css
@@ -1,6 +1,7 @@
 .geral-prods {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 
 .prod-titulo {
@@ -35,7 +36,12 @@
 
 .prod-holder{
     padding: 0 1rem 1rem 1rem;
-    width: 50%;
+    width: calc(50% - 1rem);
+    background-color: #fff;
+    box-shadow: 0px 0px 5px var(--preto-leve);
+    border-radius: 5px;
+    margin: .5rem;
+
 }
 
 .produto{
@@ -73,7 +79,7 @@
   }
 
   .prod-holder{
-    width: 25%;
+    width: calc(25% - 1rem);
   } 
 
   .sessao-produtos .prod-holder:nth-child(1), .sessao-produtos .prod-holder:nth-child(2){
@@ -99,7 +105,7 @@
   }
 
   .prod-holder{
-    width: 16%;
+    width: calc(16% - 1rem);
   }
 
   .prod-titulo{
